Formatting and Java 11 refactors
* Removed custom 'map()' constructors
* Several minor refactors
* Add unit testing for AsciidoctorHelper
* Removed 'public' modifiers from tests
* Deleted unused class AsciidoctorConversionException
* Removed unused 'sourceDirectory' from MemoryLogHandler