@@ -4,7 +4,7 @@ import org.asciidoctor.ast.Block;
 import org.asciidoctor.ast.StructuralNode;
 import org.asciidoctor.extension.BlockMacroProcessor;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 
 public class GistBlockMacroProcessor extends BlockMacroProcessor {
@@ -17,11 +17,10 @@ public class GistBlockMacroProcessor extends BlockMacroProcessor {
     public Block process(StructuralNode parent, String target,
                          Map<String, Object> attributes) {
 
-      String content = "<div class=\"content\">\n" +
-              "<script src=\"https://gist.github.com/"+target+".js\"></script>\n" +
-              "</div>";
+        final String content = "<div class=\"content\">\n" +
+                "<script src=\"https://gist.github.com/" + target + ".js\"></script>\n" +
+                "</div>";
 
-      return createBlock(parent, "pass", Arrays.asList(content), attributes);
+        return createBlock(parent, "pass", List.of(content), attributes);
     }
-
-  }
+}
